Additional fixes and API improvements #13
